@@ -4,7 +4,7 @@
 // Authors:
 //	Andreas Noever <andreas.noever@gmail.com>
 //
-//  (C) 2007 Andreas Noever
+//  (C) 2007-2008 Andreas Noever
 //
 // Permission is hereby granted, free of charge, to any person obtaining
 // a copy of this software and associated documentation files (the
@@ -26,17 +26,28 @@
 // WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 //
 
-using System;
 using System.Collections.Generic;
-using System.Diagnostics;
 
 using Mono.Cecil;
 using Mono.Cecil.Cil;
+
 using Gendarme.Framework;
+using Gendarme.Framework.Rocks;
 
 namespace Gendarme.Rules.Interoperability {
 
 	public class GetLastErrorMustBeCalledRightAfterPInvokeRule : IMethodRule {
+
+		struct Branch {
+			public readonly Instruction Instruction;
+			public readonly bool DirtyMethodCalled;
+
+			public Branch (Instruction ins, bool dirty)
+			{
+				this.Instruction = ins;
+				this.DirtyMethodCalled = dirty;
+			}
+		}
 
 		private const string GetLastError = "System.Int32 System.Runtime.InteropServices.Marshal::GetLastWin32Error()";
 		private List<string> AllowedCalls;
@@ -49,26 +60,68 @@ namespace Gendarme.Rules.Interoperability {
 			AllowedCalls.Add ("System.Boolean System.IntPtr::op_Equality(System.IntPtr,System.IntPtr)");
 		}
 
-		private static void EnsureExists (ref MessageCollection msg)
-		{
-			if (msg == null)
-				msg = new MessageCollection ();
-		}
+		List<Branch> branches = new List<Branch> ();
 
-		private static Instruction GetNextCall (Instruction ins)
+		private bool CheckPInvoke (MethodDefinition pinvoke, Instruction startInstruction)
 		{
-			while ((ins = ins.Next) != null) {
-				switch (ins.OpCode.Code) {
-				case Code.Call:
-				case Code.Calli:
-				case Code.Callvirt:
-				case Code.Newobj:
-					return ins;
-				default:
-					break;
+			branches.Clear ();
+			branches.Add (new Branch (startInstruction.Next, false));
+
+			for (int i = 0; i < branches.Count; i++) { //follow all branches
+				Instruction ins = branches [i].Instruction;
+				bool dirty = branches [i].DirtyMethodCalled;
+				bool getLastErrorFound = false;
+
+				while (true) { //follow the branch
+
+					//check if a method is called
+					if (ins.OpCode.FlowControl == FlowControl.Call) {
+
+						MethodDefinition mDef = ins.Operand as MethodDefinition;
+						if (mDef != null && mDef.IsPInvokeImpl) { //check if another pinvoke method is called, this counts as "GetLastError not called"
+							break;
+						}
+						string calledMethod = ins.Operand.ToString ();
+
+						if (calledMethod == GetLastError) {
+							getLastErrorFound = true;
+							break; //found
+						}
+
+						if (!AllowedCalls.Contains (calledMethod)) {
+							dirty = true;
+						}
+
+					}
+
+					//fetch the next instruction
+					object alternatives;
+					ins = StackEntryAnalysis.GetNextInstruction (ins, out alternatives);
+
+					if (ins == null)
+						break;
+
+					if (alternatives != null) {
+						if (alternatives is Instruction) {
+							branches.AddIfNew (new Branch ((Instruction) alternatives, dirty));
+						} else {
+							Instruction [] alts = (Instruction []) alternatives;
+							foreach (Instruction altIns in alts)
+								branches.AddIfNew (new Branch (altIns, dirty));
+						}
+					}
+					//avoid infinity loop
+					if (ins.OpCode.FlowControl == FlowControl.Branch) {
+						branches.AddIfNew (new Branch (ins, dirty));
+						break;
+					}
 				}
+
+				//report error
+				if (getLastErrorFound && dirty)
+					return false;
 			}
-			return null;
+			return true;
 		}
 
 		public MessageCollection CheckMethod (MethodDefinition method, Runner runner)
@@ -79,38 +132,29 @@ namespace Gendarme.Rules.Interoperability {
 			MessageCollection results = null;
 
 			foreach (Instruction ins in method.Body.Instructions) {
-
 				switch (ins.OpCode.Code) {
 				case Code.Call:
 				case Code.Calli:
 				case Code.Callvirt:
+					// nothing do check if there's no more instructions
+					if (ins.Next == null)
+						break;
 
 					MethodDefinition pinvoke = ins.Operand as MethodDefinition;
-					if (pinvoke == null) //FIXME: calls to external PInvoke methods are ignored.
+					// FIXME: calls to external PInvoke methods are ignored (requires AssemblyResolver)
+					// but since p/invoke should not be visible this is not a big issue
+					if (pinvoke == null) 
 						break;
 
 					if (!pinvoke.IsPInvokeImpl)
 						break;
 
-					bool allClean = true;
-					Instruction nextCallIns = ins;
-
-					while ((nextCallIns = GetNextCall (nextCallIns)) != null) { //find GetLastError()
-						string calledMethod = nextCallIns.Operand.ToString ();
-
-						if (calledMethod == GetLastError)
-							break; //found						
-						if (AllowedCalls.Contains (calledMethod))
-							continue; //allowed method
-						allClean = false; //wrong method. still searching for GetLastError()
-					}
-					if (nextCallIns == null) //We did not find GetLastError()
+					// check if GetLastError is called near enough this pinvoke call
+					if (CheckPInvoke (pinvoke, ins))
 						break;
 
-					if (allClean)
-						break;
-
-					EnsureExists (ref results);
+					if (results == null)
+						results = new MessageCollection ();
 					Location loc = new Location (method, ins.Offset);
 					Message msg = new Message ("GetLastError() should be called immediately after this the PInvoke call.", loc, MessageType.Error);
 					results.Add (msg);
